--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.1",
+    "tabler-icons-react": "^1.55.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
