--- a/client/package.json
+++ b/client/package.json
@@ -6,15 +6,18 @@
   "dependencies": {
     "@apollo/client": "^3.3.21",
     "@mantine/core": "^5.6.2",
+    "@mantine/form": "^5.6.2",
+    "@mantine/rte": "^5.6.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "graphql": "^15.4.0",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.1",
     "tabler-icons-react": "^1.55.0",
     "web-vitals": "^0.2.4"
   },
